--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -5,7 +5,7 @@
 
 =Introduction=
 
-'''Om 2008.8''' est le successeur de [[Om 2007.2]] et ajoute '''ASU''' comme nom de code. Cette version a été [http://list.openmoko.org/pipermail/community/2008-August/025619.html lancée] le '''8 août 2008'''. Om 2008.8 utilise le démarreur EFL, diverses applications utilisateurs personnalisées et [[QtopiaOnX11|Qtopia sur X11]] pour la téléphonie. Il s'agit du premier pas de GTK+ sur X11 pour utiliser une multitude de suites d'outils en collaboration. '''Om 2008.8''' supporte maintenant des applications [http/enlightenment.org EFL], [http://trolltech.com/products/qtopia Qtopia] et [http://www.gtk.org GTK+].
+'''Om 2008.8''' est le successeur de [[Om 2007.2]] et son nom de code est '''ASU'''. Cette version a été [http://list.openmoko.org/pipermail/community/2008-August/025619.html lancée] le '''8 août 2008'''. Om 2008.8 utilise le démarreur EFL, diverses applications utilisateurs personnalisées et [[QtopiaOnX11|Qtopia sur X11]] pour la téléphonie. Il s'agit du premier pas de GTK+ sur X11 pour utiliser une multitude de suites d'outils en collaboration. '''Om 2008.8''' supporte maintenant des applications [http/enlightenment.org EFL], [http://trolltech.com/products/qtopia Qtopia] et [http://www.gtk.org GTK+].
 
 ''Pour voir comment tout a débuté, rendez-vous à la'''  [[Om2008.8 Feature Plan|liste caractéristiques de Om 2008.8]].
 
@@ -39,11 +39,11 @@ Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
 
 === Personnalisation ===
 
-'''Om 2008.8''' vous permet de personnaliser votre Neo dans beaucoup d'aspects.
+'''Om 2008.8''' vous permet de personnaliser de nombreux aspects de votre Neo.
 
 *  '''Utilisez l'[[Om2008.8_Installer|installeur]]''' pour trouver les applications et les modifications pour votre Neo.
 *  '''Ajustez les thèmes''' en personnalisant vos propres fichiers [[Edje]].
-*  Les '''Codes source''' sont disponibles au public, permettant la personnalisation à toutes les couches logicielles, même le plus bas niveau.
+*  Les '''codes source''' sont disponibles au public, permettant la personnalisation de toutes les couches logicielles, même celles de plus bas niveau.
 
 === Partage ===
 * Partagez vos ([[Om2008.8_Locations|Locations]]) :
