/* Some APN names for reference */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -275,6 +275,8 @@ fido
 |-
 | Norway || Netcom || Any || internet.netcom.no || ||
 |-
+| Norway || OneCall || Any || internet || ||
+|-
 | Norway || Telenor || Any || telenor || ||
 |-
 | Sweden || Parlino ||  || internet.parlino.se || || [[GPRS_FSO|Works with FSO]]
