--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -86,28 +86,28 @@ Vous pouvez installer cette distribution sur une carte microSD afin de pouvoir [
 
 '''Qualité Audio'''
 
-* [http://docs.openmoko.org/trac/ticket/1721 le Dialer QT des fois muet pendant l'établissement d'un appel]
+* [http://docs.openmoko.org/trac/ticket/1721 le Dialer Qt est parfois muet pendant l'établissement d'un appel]
 * [http://docs.openmoko.org/trac/ticket/1640 Improve overall audio]
 
 '''Logiciels systèmes'''
 
-* [http://docs.openmoko.org/trac/ticket/1736 L'écran de boot se met en veille et ne se réveille jamais s'il n'est pas touché pendant le démarrage]
+* [http://docs.openmoko.org/trac/ticket/1736 L'écran de démarrage se met en veille et ne se réveille jamais s'il n'est pas touché pendant le démarrage]
 * [http://docs.openmoko.org/trac/ticket/1597 Après une longue veille, évènements au niveau des threads kernel]
 * [http://docs.openmoko.org/trac/ticket/1315 xglamo : performance diminuée après un moment]
 * [http://docs.openmoko.org/trac/ticket/1682 Le Neo s'arrête avant d'avoir lancé X]
 
 '''Réseau'''
-* Pas d'installations/mises à jour possibles ou des pings vers des noms de domaines en raison d'une défaillance DNS. Ce problème survient parce que le fichier /etc/resolv.conf est vide par défaut.Ajoutez cette ligne dans in /etc/network/interfaces:
+* Pas d'installations/mises à jour possibles ou des pings vers des noms de domaines en raison d'une défaillance DNS. Ce problème survient parce que le fichier /etc/resolv.conf est vide par défaut. Ajoutez cette ligne dans /etc/network/interfaces:
 
 
  up echo nameserver 192.168.0.200 >/etc/resolv.conf
 Cette ligne est à ajouter avant la ligne 'gateway address' et avant 'bluetooth networking'. Après la modification, il convient de redémarrer l'appareil. Ensuite, allez compléter manuellement /etc/resolv.conf en utilisant les données de ce fichier sur votre machine locale ou l'adresse DNS.
 
-Cela devrait résoudre la majeure partie de vos soucis de réseau. Si vous avez besoin d'autres aides, référez vous au [[USB Networking|réseau par USB]]
+Cela devrait résoudre la majeure partie de vos soucis de réseau. Si vous avez besoin d'autres aides, référez vous au [[USB Networking|réseau par USB]].
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolv.conf] est installé et devrait normalement être utilisé}}
 
-* Le réseau par USB ne devrait pas fonctionner après le boot initial.
+* Le réseau par USB ne devrait pas fonctionner après le démarrage initial.
 
 '''Utilisabilité'''
 
