--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -6,6 +6,22 @@ __NOTOC__
 <DIV ALIGN=CENTER><big>'''Willkommen im öffentlichen [[Openmoko]]&trade; Wiki'''</big><br></DIV>
 <BR>
 
+==<font color=75d806>Neuigkeiten und Ereignisse</font>==
+<table class="wikitable" cellspacing="0" cellpadding="0" style="color:white">
+<tr style="background:#ff6600; text-align:center; font-weight:bold">
+<td>Neuigkeiten und Ereignisse</td>
+</tr>
+<tr valign="top" style="background:#333333">
+<td>
+* 15.8.: [[Debian]] jetzt offiziell auf FreeRunner (siehe [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html])
+* 8.8.: Erste offizielle Ausgabe von [[Om 2008.8]] (siehe [http://lists.openmoko.org/pipermail/community/2008-August/025619.html])
+* 4-5.8.: Openmoko auf der Linuxworld, San Francisco
+* 30.7.: Die FSO Distribution veröffentlicht [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
+* 25.7.: Die Gemeinschaft hilft, [[GPS Problems|GPS Probleme]] gelöst
+</td>
+<td>
+</table>
+
 ==<font color=75d806>Einführung in Openmoko</font>==
 [[Image:GTA02.gif |100px|left|frontside]]
 [[Openmoko]]™ ist ein [http://en.wikipedia.org/wiki/Open_source Open Source] Project, welches unter der [[License| GPL und LGPL]] Lizenz steht. So ist die Idee von Openmoko, den weltweit ersten vollständig offenen Mobiltelefon-Software Stack zu entwickeln.
