--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -50,8 +50,13 @@ Das Ziel von Openmoko ist die Entwicklung der weltweit ersten freien mobilen Pla
  [[image:FIC-neo1973 small.jpg|100px|left|frontside]]
 
 Das erste kompllett unterstützte Telefon ist [[Neo1973]]. Neo1973 GTA01 (Version: Bv4) welches am 9. Juli 2007 erschien und ausschließlich im [https://direct.openmoko.com/ Openmoko Onlineshop] zu kaufen war.
+Am 11.02.2008 war es ausverkauft.
 
-Am 11.02.2008 war es ausverkauft. Neo FreeRunner (GTA02) wird bald verfügbar sein. Sie können ihn vorbestellen indem Sie Ihren Nicknamen auf die [[Buying_Interest_List|Interessenten Liste]] setzen.
+Der Neo FreeRunner (GTA02) wurde inzwischen auch ausgeliefert. Die deutschen Augustlieferungen sind wohl auch schon ausverkauft.
+Die deutschen Haendler erwarten eine neue Lieferung Mitte September.
+
+Es gibt eine Liste, auf der sich die Kaufinteressenten eintragen können: [[Buying_Interest_List|Interessenten Liste]].
+Das ist aber ein rein informative Liste. Bestellen muss man das Teil schon bei einem Händler.
 
 {| class="wikitable" cellspacing="4" cellpadding="4" width=80%
 ! width=40% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600; " |<font color=white>GTA 01</font>
