*Empty MediaWiki Message*

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -5,18 +5,17 @@
 The Framework Testing Image.
 
 ==Installing Zhone on Ubuntu ==
-* open 'Software sources'
-* add 'deb http://pkg-fso.alioth.debian.org/debian/ unstable main'
-* add 'deb-src http://pkg-fso.alioth.debian.org/debian/ unstable main'
-* add 'deb http://ftp.debian.org/debian/ experimental main'
-* close 'Software sources'
+*Add this to your /etc/apt/sources.lst :
+ deb http://pkg-fso.alioth.debian.org/debian/ unstable main
+ deb-src http://pkg-fso.alioth.debian.org/debian/ unstable main
+ deb http://ftp.debian.org/debian/ experimental main
+*Execute:
+ sudo apt-get update
 * install package libeet1 from http://nl.archive.ubuntu.com/ubuntu/pool/universe/e/eet/libeet1_1.0.1-1_i386.deb
-* open terminal
-* enter 'sudo apt-get install zhone'
-* open 'Software sources'
-* remove the ftp.debian.org entry
-* close 'Software sources'
-* enter zhone into the terminal and watch the magic happen ;) 
+*Execute:
+ sudo apt-get install zhone
+* Now you should remove the above entries to your sources.lst again and you can finally execute:
+ zhone
 
 == Developping Zhone ==
 * Install Zhone see [[Zhone#Installing Zhone on Ubuntu]]
