/* Europe */  add "France" and "Grenoble"

--- a/Openmoko_Local_Groups.mw
+++ b/Openmoko_Local_Groups.mw
@@ -155,12 +155,13 @@ Such as with [[OpenMoko_Local_Groups:_Singapore | Singapore]] or [[OpenMoko_Loca
 
 * [[Openmoko_Local_Groups: Finland|Finland]]
 ** [[Openmoko_Local_Groups: Helsinki|Helsinki]] 
-
-* France 
-** [[Openmoko_Local_Groups: Rennes|Rennes]]
-** [[Openmoko_Local_Groups: Paris|Paris]]
-** [[Openmoko_Local_Groups: Toulouse|Toulouse]] 
+ 
+* [[Openmoko_Local_Groups: France|France]]
+** [[Openmoko_Local_Groups: Grenoble|Grenoble]] 
 ** [[Openmoko_Local_Groups: Lyon|Lyon]]
+** [[Openmoko_Local_Groups: Paris|Paris]]
+** [[Openmoko_Local_Groups: Rennes|Rennes]]
+** [[Openmoko_Local_Groups: Toulouse|Toulouse]]
 
 * Germany 
 ** [[Openmoko_Local_Groups: Aachen|Aachen]]
