*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Grenoble.mw
+++ b/Openmoko_Local_Groups:_Grenoble.mw
@@ -11,7 +11,7 @@ Site de la communauté francophone (blog + forums + wiki) : [http://openmoko-fr.
 |[[User:Swap38|Swap38]]
 |Tests, Traductions, Scripts, Promotion
 |Trouver des usages innovants, Promouvoir le Libre
-|Meylan, 38
+|Meylan (38), France
 |[[Image: Moko.jpg|center]]
 |
 |}
