--- a/Games%2FOm_2007.2.mw
+++ b/Games%2FOm_2007.2.mw
@@ -43,7 +43,9 @@ Arrange the grid of pipes so that every blue box is connected to the black box i
 A variation of Net, this time the tiles around the source slide around, and walls prevent direct connections between some adjacent tiles. More involved then Net, but very playable and still fun.
 
 ===Pattern===
-More research needed.
+Also known as [http://en.wikipedia.org/wiki/Nonogram Nonogram], the goal of the game is to reconstruct the pattern on the grid from the description. Every number stands for a continuous line in the respective row or column.
+
+While remaining playable the game gets a lot harder without a right mouse button because one can't mark empty cells.
 
 ===Pegs===
 I played this game as Hi-Q (or some similar name. In the rough shape of a plus sign, you are supposed to use one peg to jump another peg. While this is easy to understand, you are supposed to have as few pegs remaining when you are done as possible. Simply drag to jump pegs. Playable, and still fun, after all these years.
