added "Silent WiFi Connection"

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -825,6 +825,10 @@ For example to send get the GPS coordinates from a stolen Neo (or if you don't k
 ==== OpenRemote ====
 Support an [http://openremote.org/ OpenRemote] controller interface.
 
+==== Silent WiFi Connection ====
+Enable a system daemon to periodically lookup for wifi connection (through know networks, open hotspots, Fonera network...), hook it with DHCP or predefined configuration, and activate silent download of RSS feeds, mails or all other thinks which have to be syncronized from the Net.
+The daemon could expose a DBus interface so to permit other programs to be notified when Internet connection is available.
+
 === Security ===
 
 ==== General Filesystem Encryption ====
