/* Installing Zhone on Ubuntu */

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -9,12 +9,13 @@ The Framework Testing Image.
  deb http://pkg-fso.alioth.debian.org/debian/ unstable main
  deb-src http://pkg-fso.alioth.debian.org/debian/ unstable main
  deb http://ftp.debian.org/debian/ experimental main
+ deb http://e17.dunnewind.net/ubuntu hardy e17
 *Execute:
  sudo apt-get update
-* install package libeet1 from http://nl.archive.ubuntu.com/ubuntu/pool/universe/e/eet/libeet1_1.0.1-1_i386.deb
-*Execute:
  sudo apt-get install zhone
-* Now you should remove the above entries to your sources.lst again and you can finally execute:
+* remove this from your /etc/apt/sources.lst
+ deb http://ftp.debian.org/debian/ experimental main
+* Now you can finally execute:
  zhone
 
 == Developping Zhone ==
