/* Flashing the Root Filesystem */

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -108,7 +108,7 @@ Flashing may fail with an error -110. This indicates that the kernel is too big 
 
 == Flashing the Root Filesystem ==
 
-The root filesystem has to be an image in jffs2 format. If the file you downloaded is zipped or compressed (has a .gz or .zip extension) you have to uncompress it first.
+The root filesystem has to be an image in jffs2 format. If the file you downloaded is zipped or compressed (has a .gz, bz2, .zip, tar, tar.gz or .tgz extension) you have to uncompress it first.
 
 The command format is
 
