*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -430,8 +430,11 @@ See also [[Openmoko Local Groups: Finland]], if you're interested.
 
 === Possible new order(s) ===
 
-Status: 2-6/10
+Status: 5-9/10
 These did not participate in the pulster.de order(s) shown below.
+
+Oulu:
+* Mikko Värri, vmj AT linuxbox DOT fi [ordering for 3]
 
 Helsinki:
 * Jerry Jalava <br /> jerry DOT jalava AT iki DOT fi [possibly ordering for 3-4 people]
