--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -99,6 +99,7 @@ This should solve most off your moko side networking issues. If you need any oth
 '''Usabillity''' 
 * The Pin-Dialog by default just shows letters. You have to slide your finger up/down over the keyboard to make the numbers/uppercase/special characters appear.
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Sollution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
+* The installer app doesn't release administrative rights which results in not being able to use opkg. Alternate Sollution: On the FreeRunner, use the drop-down menu to close all open applications.
 
 == Updates ==
 
