*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -90,7 +90,7 @@ path = /dev/null
 Reboot to enable this configuration.
 * '''Issue:'''  Is there an easier way?
 
- # gpsd-reconfigure gpsd
+ # dpkg-reconfigure gpsd
 
 * Start gpsd automatically no boot? Yes.
 * Device the GPS receiver is attached to: /dev/ttySAC1
