--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -8,8 +8,7 @@ Openmoko is still developing new phones. Each phone has an internal name before 
 The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chip.
 
 == GTA03 (future)==
-
-The next phone, GTA03, will be based on the same system-on-a-chip as the Neo FreeRunner (GTA02). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks.
+{{Main|GTA03 revisions}}
 
 == GTA02  (Neo FreeRunner)==
 {{Main|GTA02 revisions}}
