--- a/GTA03.mw
+++ b/GTA03.mw
@@ -2,7 +2,8 @@ The next phone, GTA03, will be based on the same system-on-a-chip as the Neo Fre
 
 == GTA03 Specifications ==
 The GTA03 will be a GTA02 but with a major hardware revision
-New things:
+
+New:
 * New case design.
 * 3.5mm headset
 * New GSM chip (2.75/EDGE)
@@ -10,8 +11,8 @@ New things:
 * Camera
 * Based on the same SoC 
 * GPS: u-blox ANTARIS 5 instead of ANTARIS 4
-Removed things:
-* the (compromised) Glamo chip 
+Removed:
+* the (compromised) Glamo chip
 
 == GTA03EVB ==
 * AUG.11.2008:  the 25 first GTA03EVB arrived in office 
