--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -4,8 +4,7 @@ Openmoko is still developing new phones. Each phone has an internal name before 
 {{Main|HXD8}}
 
 == GTA04 (future) ==
-
-The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chip.
+{{Main|GTA04 revisions}}
 
 == GTA03 (future)==
 {{Main|GTA03 revisions}}
