*Empty MediaWiki Message*

--- a/HXD8.mw
+++ b/HXD8.mw
@@ -4,10 +4,8 @@ According to [http://lists.openmoko.org/pipermail/community/2007-October/011324.
 
 It has been confirmed that the DE is an HXD8
 
-{| style="background-color:#EFEFFF;color:#000;border:1px solid #9F9FFF;margin:1em 5% 1em 5%;"
-| style="padding:0.5em 0.5em;" |
-| style="padding:0.5em 0.5em;" | <b>Speculations:</b> This {{{1|article or section}}} documents a device that is <i>not yet confirmed</i> formally and the device (if even released) <i>may differ</i> from the specifications given here. This page is based on well educated guesses, not facts. 
-|}
+{{Speculations}}
+
 It looks 
 ==Hardware==
 From the information found in the [https://svn.openmoko.org/trunk/doc/hardware/HXD8v011/ hardware documentation] and [https://svn.openmoko.org/trunk/src/target/kernel/patches/ kernel patches] parts of the subversion repositories, the following specifications can be predicted.
