*Empty MediaWiki Message*

--- a/HXD8.mw
+++ b/HXD8.mw
@@ -1,12 +1,11 @@
-like FIC is going to develop another device for OpenMoko, with the (code)name <b>HXD8</b>. On May 26th 2007  (GMT)  Sean [http://lists.openmoko.org/pipermail/community/2007-May/005407.html confirmed] the existence of the device, said hardware support was almost done and cleverly told us to wait anxiously. 
+HXD8 is the codename of a device that is going to be developped by Openmoko. For more information about other phones in development, visit [[Phone Development]].
+
+On May 26th 2007  (GMT)  Sean [http://lists.openmoko.org/pipermail/community/2007-May/005407.html confirmed] the existence of the device, said hardware support was almost done and cleverly told us to wait anxiously. 
 
 According to [http://lists.openmoko.org/pipermail/community/2007-October/011324.html this post] the device is a networked collaborative automotive GPS unit, from http://dash.net/ .
 
-It has been confirmed that the DE is an HXD8
-
 {{Speculations}}
 
-It looks 
 ==Hardware==
 From the information found in the [https://svn.openmoko.org/trunk/doc/hardware/HXD8v011/ hardware documentation] and [https://svn.openmoko.org/trunk/src/target/kernel/patches/ kernel patches] parts of the subversion repositories, the following specifications can be predicted.
 
