*Empty MediaWiki Message*

--- a/GTA04.mw
+++ b/GTA04.mw
@@ -1,4 +1,6 @@
-The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chip.
+GTA04 is the codename of a phone that is going to be developped by Openmoko. For more information about other phones in development, visit [[Phone Development]]. This phone will be based on a different system-on-a-chip.
+
+{{Speculations}}
 
 == GTA04 specifications ==
 The GTA04 will be a GTA03 but with a major hardware revision 
