*Empty MediaWiki Message*

--- a/GTA03.mw
+++ b/GTA03.mw
@@ -1,9 +1,9 @@
-GTA03 is the codename of a phone that is going to be developped by Openmoko. For more information about other phones in development, visit [[Phone Development]]. The GTA03 will be based on the same system-on-a-chip as the [[Neo FreeRunner]] (GTA02). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks.
+GTA03 is the codename of a phone that is going to be developped by Openmoko. For more information about other phones in development, visit [[Phone Development]]. The GTA03 will be based on the same system-on-a-chip as the [[Neo FreeRunner]] ([[GTA02 revisions|GTA02]]). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks.
 
 {{Speculations}}
 
 == GTA03 Specifications ==
-The GTA03 will be a GTA02 but with a major hardware revision
+The GTA03 will be a [[GTA02 revisions|GTA02]] but with a major hardware revision
 
 New:
 * New case design.
