--- a/GTA01:Neo_1973.mw
+++ b/GTA01:Neo_1973.mw
@@ -1,6 +1,6 @@
 {{Neo1973}}
 
-The '''Neo 1973''' (internal codename GTA01) is the first phone designed to run [[Openmoko]].
+The '''Neo 1973''' (internal codename [[GTA01 revisions|GTA01]]) is the first phone designed to run [[Openmoko]].
 It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
 This pages contains all GTA01 related topic of wiki. Press the following links, you can easily find the page you want.
 
