*Empty MediaWiki Message*

--- a/GTA01_revisions.mw
+++ b/GTA01_revisions.mw
@@ -1,3 +1,5 @@
+GTA01 is the codename of the first phone developed from Openmoko. It was sold under the name [[Neo 1973]]. This page gives you an historical overview of which steps were needed before the [[Neo 1973]] was born.
+
 == GTA01 specification ==
 * Neo 1973 (GTA01B_v4)
 * Battery (1200mAh)
