*Empty MediaWiki Message*

--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -1,16 +1,24 @@
 Openmoko is still developing new phones. Each phone has an internal name before it's reaches it's final status. Here you can follow the development for nearby.
 
-== HXD8 (future) ==
+= In development =
+
+== HXD8  ==
 {{Main|HXD8}}
 
-== GTA04 (future) ==
+== GTA04 ==
 {{Main|GTA04 revisions}}
 
-== GTA03 (future)==
+== GTA03 ==
 {{Main|GTA03 revisions}}
+
+= Already released =
 
 == GTA02  (Neo FreeRunner)==
 {{Main|GTA02 revisions}}
 
 == GTA01 (Neo 1973)==
 {{Main|GTA01 revisions}}
+
+= FAQ =
+*Question: the abbreviation GTA stands for?
+*Answer: Probably, It stands for Generic Telephone Appliance
