--- a/Weekly_Engineering_News.mw
+++ b/Weekly_Engineering_News.mw
@@ -3,3 +3,7 @@ Wolfgang Spraul tries to give a weekly summary of what's going on in Openmoko. Y
 * 17/08/08 [http://n2.nabble.com/Weekly-Engineering-News-33-2008-tp729555p729555.html Weekly Engineering News 33]
 * 12/08/08 [http://n2.nabble.com/Weekly-Engineering-News-32-2008-tp720199p720199.html Weekly Engineering News 32]
 * 03/08/08 [http://n2.nabble.com/Weekly-Engineering-News-31-2008-tp667396p667396.html Weekly Engineering News 31]
+
+== Other Openmoko reports ==
+* 08/08/08 [[Om 2008.8]] was [http://n2.nabble.com/Openmoko-Om-2008.8-Release-tp680370p680370.html announced] by William Lai
+* 22/07/08 [http://n2.nabble.com/Weekly-report-tp576113p576113.html weekly report] on [[FSO]] by Guillaume Chereau
