*Empty MediaWiki Message*

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -1,6 +1,6 @@
 {{Languages|Qtopia_on_FreeRunner}}
 
-This page provides instructions on how to install Qtopia (proper, not the [[ASU]] or [[QtopiaOnX11]] efforts) on the GTA02 (Freerunner) phone.  It is similar to the [[Qtopia on Neo1973]] page.
+Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard, non le varianti della [[ASU]] o della [[QtopiaOnX11]]) sul telefono GTA02 (Freerunner). E' simile alla pagina [[Qtopia on Neo1973]].
 
 {|align=right
 |__TOC__
