--- a/Debian.mw
+++ b/Debian.mw
@@ -87,8 +87,8 @@ Edit <code>/etc/frameworkd.conf</code>.  In the section <code>[ogpsd]<code>, edi
 path = /dev/null
 </pre>
 
-Reboot to enable this configuration.
-* '''Issue:'''  Is there an easier way?
+ /etc/init.d/fso-frameworkd restart
+ /etc/init.d/zhone-session stop && sleep 2 && /etc/init.d/zhone-session start 
 
  # dpkg-reconfigure gpsd
 
