--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -26,7 +26,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 ** Started when GTA03EVB is in office (AUG.11.2008)
 ** Port kboot to GTA03EVB (Matt) '''ONGOING'''
 ** voltage, power consumption, RF characteristics (finished by end of AUG.22.2008)
-*** Siemens MC 75i EDGE MODEM 
+*** Siemens MC 75i EDGE MODEM (ONGOING)
 *** u-blox 5 Antaris GPS (Done Aug.12.2008)
 *** CSR BT 
 *** Accton/Atheros AR6001 Wi-Fi module
