*Empty MediaWiki Message*

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -7,7 +7,37 @@
 
 [[Category:Applications]]
 
-'''A .ipk file for this program is now available.   It is much easier to install than it used to be.'''
+'''NEWS'''
+
+.ipk files for this program are now available for both the 2007.2
+and 2008.8 stacks.   It is much easier to install than it used to be.
+
+Version 1.1 Released:
+    New user features:
+        1) Added "finger mode", which allows
+           orrery to be used without a stylus.
+           This is now the default mode.
+        2) Users can now specify which
+           directory is the top of the data file 
+           tree for orrery.   By default, this is 
+           /media/card/orrery, but the -d switch
+           overrides this, so
+           "orrery -d /usr/share/orrery"
+           will tell orrery to
+           look in /usr/share/orrery for the
+           data files.
+        3) The orrery will now display the names
+           of some of the most prominent
+           stars.   This is not enabled by
+           default, however - you must select
+           this feature using the "display" menu.
+    Bug Fixes:
+        1) Fixed bug which caused cardinal point 
+           label ("North" etc) to be
+           displayed at the top of the window 
+           rather than at the bottom, where
+           it belongs.
+
 
 Note - although the screenshots shown here were
 taken with the 2007.2 stack, this application
@@ -24,9 +54,10 @@ The image above shows the default display - all stars visible to the unaided eye
 plotted with a size much larger than their true angular size on
 the sky.
 
-The view can be panned around the sky by tapping the green arrows at the bottom, or the green azimuth values.   The sesitive
-areas are small, so most people
-will need to use a stylus to pan the screen.
+In "finger mode" The image can be panned by tapping your finger in
+the bottom 1/5 of the display (excluding menus).   If you are
+not in finger mode,
+the view can be panned around the sky by tapping the green arrows at the bottom, or the green azimuth values.
 
 [[Image:OrreryFullScreenSky.png|Orrery Full Screen Sky]]
 
@@ -57,9 +88,11 @@ The display menu allows you to configure the display, selecting
 such things as the lowest magnitude displayed, constellation
 lines, etc.
 
-When in fullscreen-mode you have to tap the area near the top of the display (in the region
-where the GMT, LST and location
-are shown) to quit fullscreen.
+When in fullscreen-mode you have to tap the area near the top of the display to quit fullscreen-mode.   In finger mode, you
+may tap anywhere in the top 1/5 of the display.   If you
+are not in finger mode, you must tap above the top
+blue line, in the region
+where the GMT, LST and location are shown, to quit fullscreen.
 
 An opkg package, and/or source code and executables can be downloaded from
 
