--- a/Navit.mw
+++ b/Navit.mw
@@ -81,6 +81,7 @@ For adventurous people, one way to do this:
  http://projects.openmoko.org/projects/mokotts/
  
  install espeak, dotconf, and then speech-dispatcher.
+ note: running 2008.8 updating from zecke's "testing" repo does not require "dotconf"
  
  * change the speech tag in navit.xml:
  <speech type="cmdline" data="spd-say '%s'" />
