--- a/Orrery.mw
+++ b/Orrery.mw
@@ -55,8 +55,15 @@ plotted with a size much larger than their true angular size on
 the sky.
 
 In "finger mode" The image can be panned by tapping your finger in
-the bottom 1/5 of the display (excluding menus).   If you are
-not in finger mode,
+the bottom 1/5 of the display (excluding menus).   The size of
+the panning step is controlled by how close your finger is
+to the edge of the display.   If you tap in the center, it pans
+by 0 degrees, and nothing happens.   If you tap near the 
+left or right edges, it
+pans by the maximum allowed amount, +-45 degrees.   Pan steps are
+quantized in increments of 5 degrees.
+
+If you are not in finger mode,
 the view can be panned around the sky by tapping the green arrows at the bottom, or the green azimuth values.
 
 [[Image:OrreryFullScreenSky.png|Orrery Full Screen Sky]]
