/* Accessing the microSD card */  link to package management guide

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -222,7 +222,7 @@ headphones and not out of the speaker.
 
 Mounted at /media/card by default.
 
-If you have multiple partitions on the card, the first (/dev/mmcblk0p1) will be mounted at /media/card, the second at /media/mmcblk0p2, the third at /media/mmcblk0p3 etc.
+If you have multiple partitions on the card, the first (/dev/mmcblk0p1) will be mounted at /media/card, the second at /media/mmcblk0p2, the third at /media/mmcblk0p3 etc. To setup the package management to write on the microSD card when installing new software follow the [[Package_management | package management guide]].
 
 == Set up USB-based networking, SSH and update ==
 
