--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -110,6 +110,8 @@ exec chat -v -S -s\
         CONNECT /n/d
 </pre>
 
+<b>(08/18/08) Note:</b> I needed to add the command "AT+CMOD=2" (formatted as "OK AT+CMOD=2\" without the quotes) in order to get GPRS working with the above script (otherwise it would ERROR on the CFUN, COPS, or the ATD if the other two were removed).  I have T-Mobile (US) with the $5.99 "tzones" addon, which works with Minimo as it supports HTTP proxy setups.
+
 == gprs-connect-chat, version 2 ==
 
 Update: On my freerunner the first AT+CFUN=1 always generated ERROR. I managed to get gprs work by using the following script from http://lists.openmoko.org/pipermail/community/2008-July/023246.html:
