*Empty MediaWiki Message*

--- a/Kuai_Yi_Dian_GM519.mw
+++ b/Kuai_Yi_Dian_GM519.mw
@@ -1,4 +1,4 @@
-*Model: Kuai Yi Dian GM519
+*Model: Kuai Yi Dian (快易典）GM519
 *Manufacture: Shenzhen Huapu Electronic Technology Co., Ltd
 *LCM resolution: 240 x 160
 *LCM Active Area: 75.25 x 45.59
