*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -451,6 +451,7 @@ __NOTOC__
 
 ==Wish List==
 ===Hardware Ideas===
+*[[Wishlist:Expansion Back]]
 *[[Wish List]]
 *[[Wishlist - Hardware - Novel Devices]]
 *[[Wishlist:Unlikely]]
