/* Possible new order(s) */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -437,7 +437,8 @@ Oulu:
 * Mikko Värri, vmj AT linuxbox DOT fi [ordering for 3]
 
 Helsinki:
-* Jerry Jalava <br /> jerry DOT jalava AT iki DOT fi [possibly ordering for 3-4 people]
+* Jerry Jalava <br /> jerry DOT jalava AT iki DOT fi
+* Henri Bergius <br /> henri DOT bergius AT nemein DOT com [ordering for 3]
 
 Turku:
 
