/* Possible new order(s) */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -430,7 +430,7 @@ See also [[Openmoko Local Groups: Finland]], if you're interested.
 
 === Possible new order(s) ===
 
-Status: 5-9/10
+Status: 9/10
 These did not participate in the pulster.de order(s) shown below.
 
 Oulu:
