--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -1,7 +1,7 @@
 {{Om 2008.8}}
 == Introduction ==
-'''Locations''' (codenamed ''Splinter'') is a UI application within the [http://diversity.projects.openmoko.org/ Diversity project]. 
-'''Locations''' uses [http://www.openstreetmap.org OpenStreetMap] allowing users to browse maps and manage saved locations called ''Tags''.
+'''Locations''' (codenamed ''Splinter'') is a location sharing application based on GPS and SMS.  It
+uses [http://www.openstreetmap.org OpenStreetMap] as its map source and allows users to manage and share saved locations.
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |  
@@ -81,11 +81,13 @@ To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer
 |}
 
 == Reference ==
-[1] Diversity project - http://diversity.projects.openmoko.org/
+[1] git repository of Locations - http://git.openmoko.org/?p=om-locations.git;a=summary
 
-[2] Assassin project - http://code.google.com/p/om-assassin/
+[2] Diversity project - http://diversity.projects.openmoko.org/
 
-[3] OpenStreetMap - http://www.openstreetmap.org/
+[3] Assassin project - http://code.google.com/p/om-assassin/
+
+[4] OpenStreetMap - http://www.openstreetmap.org/
 
 
 [[Category:Applications]]
