--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -56,215 +56,104 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 * 110 +/- 5 g (4 ounces) without battery <br>
 
 == Main components ==
-=== Processor ===
-The main Processor (CPU) is a [[Samsung S3C2442B B54]] (running at 400 MHz)
 
-GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA02v4/gpio.txt
-
-{{:Samsung S3C2442B B54}}
-
-=== Power Management ===
-A NXP PCF50633 04 N3 is used for [[Neo1973_Power_Management|power management]].
-
-* NXP PMU index: [http://www.nxp.com/products/power_management/pmu/index.html NXP PMU index page]<br>
-* Product Datasheet: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633DS_02.pdf NXP PCF50633 Product Data Sheet]<br>
-* Product User manual: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633UM_6.pdf NXP PCF50633 User Manual]<br>
-**Special thanks NXP provide full user manual and support openness for all developer
-**Datasheet/User manual usage  [http://lists.openmoko.org/pipermail/community/2008-March/013898.html was legally authorized by NXP]
-* Connected to: S3C2442 via I2C, client address is 0x08. <br>
-* Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch<br>
-
-=== Flash ===
-==== NAND Flash ====
-256MB integrated Samsung NAND flash inside the 2442 multi-chip package, attached to the S3C2442 NAND controller
-
-* Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442 S3C2442]
-* Data Sheet: S3C2442 B54 comes with 256 MB NAND MCP package
-* Connected to: S3C2442 NAND controller<br>
-
-==== NOR Flash ====
-
-16MBit ST M58WR016KB706E NOR flash for 'unbrickable emergency boot' feature.
-
-* Product Homepage: [http://www.st.com/stonline/products/families/memories/fl_nor_mob/index.htm ST Mobile Flash NOR/Mobile Terminal]
-* Data Sheet: [http://www.st.com/stonline/products/literature/ds/13023/m58wr032qb.pdf M58WR016]
-* Connected to: S3C2442 NAND controller<br>
-
-=== SDRAM ===
-128MB SDRAM (64MB inside 2442 MCP, 1x Samsung K4M51323PC) attached to S3C2442 SDRAM controller
-* Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=136&partnum=K4M51323PC Samsung K4M51323PC]
-* Data Sheet: [http://www.samsung.com/global/system/business/semiconductor/product/2007/6/11/MobileSDRAM/MobileSDRSDRAM/512Mbit/K4M51323PC/ds_k4m51323pc.pdf Samsung K4M51323PC]
-* Connected to: S3C2442 <br>
-
-== GSM/GPRS ==
-The [[GSM]] (including GPRS) modem is Texas Instruments Calypso based.
-
-* Connected to: S3C2442 UART1 (full-uart, RxD, TxD, CTS, RTS), /dev/ttySAC0 in userspace
-* PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
-* [[External GSM Antenna|Accessible GSM/GPRS antenna jack]] (if battery cover is removed) - MURATA MM8430-2610RB3 SMD RF TEST PORT. FOr compatible adapter see Murata part no. MXHS83QE3000<br>
-
-=== CALYPSO ASIC digital baseband ===
-Unfortunately we cannot provide many details on the GSM chipset due to very tight [http://en.wikipedia.org/wiki/Non-disclosure_agreement NDA]s.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the S3C2442.  On that interface, [http://www.3gpp.org/ftp/Specs/archive/07_series/07.05/ GSM 07.05], [http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/ GSM 07.10] and other standardized protocols are used.
-
-The NDAd documentation for the calypso, [http://cryptome.org/ti-calypso1.pdf register definition ] and [http://cryptome.org/ti-calypso2.pdf hardware definition ] was leaked onto a public forum on the 4th of March by persons or persons unknown.
-The legality of reading these files may vary according to your local laws, as may generating code from them.
-
-
-*Calypso D751992AZHH<br>
-*The firmware within GTA02 should be moko6 or later (internal code name)
-
-=== TI TWL3025BZGMR analog baseband ===
-*Product Homepage: [http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12295&contentId=4703 TWL3014]<br>
-
-=== TI TRF6151 (GSM/PCS) RF Transceiver ===
-*Product Homepage: [http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12296&contentId=4701 TRF6151] <br>
-GPRS Class12/CS4 <br>
-
-== AGPS ==
-[[u-blox ANTARIS 4 ATR0635]] chip
-* Connected to: S3C2442 UART2, /dev/ttySAC1 in userspace
-{{:u-blox ANTARIS 4 ATR0635}}
-
-== Accelerometers ==
-Two ST LIS302DL
-* Homepage: http://www.st.com/stonline/products/literature/ds/12726/lis302dl.htm
-* Datasheet: http://www.st.com/stonline/products/literature/ds/12726.pdf
-* Connected to: S3C2442 via SPI interface
-* S3C2442 SPI EINT interrupt inputs<br>
-
-== Graphics/3D Acceleration ==
-
-Smedia Glamo 3362.
-* Homepage: http://www.smediatech.com/product3362.htm
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/smedia-glamo.patch
-* Data sheet: This is not available, as it is under NDA. It will likely never be available. (Source: Raster - IRC). There is hope that the glamo chip features may be usable even without a NDA, see [http://unadventure.wordpress.com/2008/06/08/accelerating-in-my-pocket/ the hack here]
-* Connected to: S3C2442 Address/Data bus <br>
-
-=== microSD ===
-The GTA02 has one microSD aka Transflash slot. Using the Glamo 3362 MMC/SD controller
-
-*It should support SDHC, and 4GB card has been tested. Anyone with 8GB card? MicroSD slot is [[Disassembling_Neo1973#Opening_back_cover|under battery]].
-* Connected to: Glamo 3362 MMC/SD controller
-* Driver: Check svn for the SMedia driver with SD implementation
-* [[Supported microSD cards]]
-* Specifications: [http://www.sdcard.org/about/memory_card/pls/ SD Simplified Specification], [http://www.mmca.org/compliance/buy_spec/AN_MMCA050419.pdf MMC (partial)], [http://www.sandisk.com/Assets/File/OEM/Manuals/manual-rs-mmcv1.0.pdf MMC (product manual)]
-* SANDISK 128 MB/512 MB and some 4G SDHC card been verified could work on GTA02<br>
-
-== LCD Module (LCM) ==
-Toppoly (tpo) 2.8" diagonal (1.7" x 2.27" - 43mm x 58mm) 480x640 TD028TTEC1 module, using a Toshiba JBT6K74 TFT 
-LCD Driver Chipset.<br>
-* Homepage: [http://www.tpo.biz/ENG/business-eng/Activer-Matrix-VGA.htm Activer-Matrix-VGA.htm]
-* Specification: http://www.cip.physik.uni-muenchen.de/~Wolfgang.Draxinger/stuff/openmoko/TD028TTEC1.pdf
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-jbt6k74.patch
-* Backlight Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-backlight.patch
-* Connected to: Glamo3362 LCM interface and Glamo3362 SPI Interface<br>
-
-==== Touch Screen ====
+{|
+|-
+! style="width:250px" | Component 
+! Chip or Info
+|-
+| ''' Main Components '''
+|
+|- 
+| Processor
+| [[Samsung S3C2442B B54]]
+|-
+| Power Management
+| [[NXP PCF50633]] 04 N3
+|-
+| &nbsp;&nbsp; '''Flash'''
+| 
+|-
+| &nbsp;&nbsp; NAND Flash
+| 256MB into [[Samsung S3C2442B B54]]
+|-
+| &nbsp;&nbsp; NOR Flash
+| 16MBit [[ST M58WR016KB706E]]
+|-
+| style='vertical-align:top' |&nbsp;&nbsp; SDRAM
+| 
+*64MB integrated into the [[Samsung S3C2442B B54]]
+*64MB from the [[Samsung K4M51323PC]]
+*Total of 128MB
+|-
+| GSM + GPRS modem
+| Texas Instruments Calypso based, probably [[TI Calypso D751992AZHH]].
+|-
+| GPS + AGPS 
+| [[u-blox ANTARIS 4 ATR0635]] chip
+|-
+| Accelerometers
+| Two [[ST LIS302DL]]
+|-
+| Graphics/3D Acceleration
+| [[Smedia Glamo 3362]]
+|-
+| microSD 
+| Supported trought the [[Smedia Glamo 3362]]
+|-
+| &nbsp;&nbsp; '''LCD'''
+|
+|-
+| &nbsp;&nbsp; LCD Module (LCM) 
+| [[TPO TD028TTEC1]] module
+|-
+| style='vertical-align:top' | &nbsp;&nbsp; Touch Screen
+| 
 * Connected to: S3C2442 TS controller
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_touchscreen.patch
-
-== Bluetooth Module==
-Delta DFBM-CS320 Class2 Module, using CSR BlueCore4
-
-* Data Sheet: [http://www.delta.com.tw/product/cp/vco/BT/download/pdf/CS/2.DFBM-CS320.pdf 2.DFBM-CS320.pdf]
-* CSR Data Sheet: [http://www.csrsupport.com/download/2302/CS-101564-DSP10%20BlueCore4-ROM%20Product%20Data%20Sheet.pdf CS-101564-DSP10 BlueCore4-ROM Product Data Sheet.pdf]
-* Driver: Stock Linux Kernel BlueZ
-* Connected to: S3C2442 USB Host controller (OHCI)
-* PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch<br>
-
-=== Bluetooth Audio ===
-This one is wired via PCM bus from the CSR Bluetooth chip to the Wolfson codec.<br>
-
-== WiFi Module==
-
-Accton (WLAN 802.11b/g SiP-M WM3236AQ(Flash Ver:2.0 Atheros AR6001GZ)
-* Connected to: S3C2442 SDIO Host controller<br>
-* Datasheet: [http://www.accton.com/products/Datasheet/WM3236A.AQ.pdf Accton 3236AQ datasheet]<br>
-* Driver: http://svn.openmoko.org/developers/sameo/patches/<br>
-
-== Vibrator ==
+|-
+| &nbsp;&nbsp; '''Bluetooth'''
+|
+|-
+| &nbsp;&nbsp; Bluetooth Module
+| [[Delta DFBM-CS320 Class2 Module]]
+|-
+| &nbsp;&nbsp; Bluetooth Audio 
+| This one is wired via PCM bus from the CSR Bluetooth chip to the Wolfson codec ([[WM8753]]).<br>
+|-
+| WiFi Module
+| [[Accton_WM3236AQ]]
+|-
+| style='vertical-align:top' | Vibrator
+|
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-vibrator.patch
 * Connected to: S3C2442 GPIO
-
-== USB Host ==
-The USB Host controller is inside the S3C2442
-* Driver: Stock Linux kernel ohci_hcd
-* USB version 1.1
-* Supply USB 5v in Host mode using usb power switch AAT1275IRN-5.0-T1
-** http://www.analogictech.com/products/digitalfiles/AAT1275.pdf
-* A net EN_USBHOST is controlled by PMU GPIO "GPO", this one signal when asserted (high)
-** enables generation of 5V for external device using a charge pump
-** enables connection of 15K pulldowns to D+ and D- to allow device insertion and removal detection for host mode
-** DISABLES the path for USB power to charge the battery
-
-It should also be possible to use host mode with externally-provided power. This will allow the FreeRunner to be connected to a USB device and be powered and charging the battery if present at the same time.
-
-* Connect 0V, d+, d-, +5 to your USB device
-* Connect a 15k ohm resistor between d+ and ground
-* Connect a 15k ohm resistor between d- and ground
-* Connect 0V, +5 to your >1A power source
-** If your power source was not the Openmoko 1A charger, additionally connect a 47K ohm 5% resistor between the ID pin and ground to pretend to be the 1A charger.
-
-In addition you need to make sure EN_USBHOST signal that enables the physical Host mode power generation and disables the USB -> PMU charging path is deasserted.  This may be taken care of automatically shortly by detection of the 48K resistor on a USB insertion leading to forcing EN_USBHOST deasserted.  The charge pump that generates the 5V in host mode doesn't seem to mind getting external 5V given to it, but the real issue is that the battery will not be charged at all if we leave EN_USBHOST asserted since one of its jobs is to stop that happening.
-
-== USB Device ==
-The USB Device controller is inside the S3C2442 
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_udc.patch
-* Please see [[USB Product IDs]] on information about which Vendor/Product IDs we use
-* 1200mAh lithium battery charges when connected to powered host.
-* Mini-AB connector similar to [http://www.cypressindustries.com/shoponline/proddetail.asp?prod=CCMUSBAB-32005-700&cat=34 this one].
-
-== I2C Devices ==
-I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
+|-
+| USB
+| [[Samsung S3C2442B B54]]
+|-
+| style='vertical-align:top' | I2C Devices
+| I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
 Please see [[I2C | Neo I2C Devices]] for more information & a list of devices & the addresses currently in use & documented for the Neo1973.<br>
-
-== Audio ==
-See also: [[Neo1973 Audio Subsystem]]
-
-=== Wolfson Codec ===
-There's a [[WM8753]] Wolfson Microelectronics CODEC (This is not a 'smart' codec that can interpret MP3/... it is a simple dumb 'sound card'.)
-* Product Homepage: http://www.wolfsonmicro.com/products/WM8753/
-* Data Sheet: [http://www.wolfsonmicro.com/uploads/documents/en/WM8753.pdf WM8753.pdf]
-* Connected to: S3C2442 IIS interface (PCM data), S3C2442 I2C (Control)
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/asoc.patch
-
-=== Mono Amplifier ===
-There's a National Semiconductor [[LM4853]] Mono Amplifier at the analog audio output of the WM8753
-
-* Product Homepage: [http://www.national.com/pf/LM/LM4853.html LM4853.html]
-* Data Sheet: [http://www.national.com/ds.cgi/LM/LM4853.pdf LM4853.pdf]
-* Connects to (LM4853 pin): 
-** S3C2442 GPIO: HP_IN, AMP_SHUT (shutdown); 
-** Wolfson WM8753: LOUTL (LEFTIN), LOUTR (RIGHTIN); 
-** speaker4102: (LEFTOUT/BLTOUT-, BLTOUT+);
-** headset-jack: ring 2 (RIGHTOUT), ring 3 (LEFTOUT/BLTOUT-) via 1uF-33R each
-
-=== Analog wired Headset ===
-There's a four-ring 2.5mm stereo jack which provides connectivity to old-fashioned wired headsets.
-
-The headsets used by Motorola smartphones (A780,A1200, ...) and the V-360 have a compatible configuration.
-
-ring<br>
-1(base): GND<br>
-2: right out<br>
-3: left out<br>
-4(tip): mic + HOLD-button(press:short to GND)
-
-=== Buttons ===
-The Neo1973 GTA02 features two buttons:
-* [[Neo1973 Power Button|The Power Button]]
-* [[Neo1973 AUX Button|The "Aux" button]]
-
-== Case ==
-The case for the FreeRunner is all black, as seen on the front page of the wiki.
-
-Openmoko has released the CAD files for the case schematics for the Openmoko [[Neo1973]] (GTA01) and Neo FreeRunner. These are available in the original Pro/E (.asm/.prt) format and alternative formats created from the originals.
-
-We welcome your assistance in providing other formats. If you are able to convert CAD files from Pro/E format to other formats, please contact [mailto:michael@openmoko.org]. We are especially interested in the DXF format and in images rendered from these files.
-
-* [http://downloads.openmoko.org/CAD/NeoFreerunner_ProE.zip The original Pro/E (.asm/.prt) format]
-
-[http://downloads.openmoko.org/CAD/ Browse CAD directory]
+|-
+| &nbsp;&nbsp; '''Audio'''
+| See also: [[Neo1973 Audio Subsystem]]
+|-
+| &nbsp;&nbsp; Wolfson Codec
+|[[WM8753]]
+|- 
+| &nbsp;&nbsp; Mono Amplifier
+| [[LM4853]]
+|- 
+| style='vertical-align:top' | &nbsp;&nbsp; Analog wired Headset
+| [[Neo FreeRunner Analog wired Headset]] 
+|- 
+| style='vertical-align:top' | Buttons 
+| [[Neo1973 Power Button|The Power Button]] <br> [[Neo1973 AUX Button|The "Aux" button]]
+|- 
+| style='vertical-align:top' | Case
+| [[Neo FreeRunner case]]
+|}
 
 =Accessory=
 
