--- a/TPO_TD028TTEC1.mw
+++ b/TPO_TD028TTEC1.mw
@@ -1,5 +1,5 @@
 * Feature: LCD Module
-* Spec: Toppoly (tpo) 2.8" diagonal (1.7" x 2.27" - 43mm x 58mm) 480x640 TD028TTEC1 module
+* Spec: Toppoly (tpo) 2.8" diagonal (1.7" x 2.27" - 43mm x 58mm) 480x640 TD028TTEC1 module (283 DPI)
 * Using a Toshiba JBT6K74 TFT LCD Driver Chipset
 * Homepage: [http://www.tpo.biz/ENG/business-eng/Activer-Matrix-VGA.htm Activer-Matrix-VGA.htm]
 * Specification: http://www.cip.physik.uni-muenchen.de/~Wolfgang.Draxinger/stuff/openmoko/TD028TTEC1.pdf
@@ -9,3 +9,8 @@
 == Neo FreeRunner ==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Smedia Glamo 3362]] LCM interface and [[Smedia Glamo 3362]] SPI Interface<br>
+
+== Neo 1973 ==
+{{Main|Neo1973_hardware}}
+* Connected to: [[Samsung S3C2410]] Display Controller and [[Samsung S3C2410]] SPI Interface channel 1
+* Backlight controllable via /sys/class/backlight/gta01-bl
