*Empty MediaWiki Message*

--- a/Delta_DFBM-CS320_Class2_Module.mw
+++ b/Delta_DFBM-CS320_Class2_Module.mw
@@ -3,8 +3,13 @@
 * Data Sheet: [http://www.delta.com.tw/product/cp/vco/BT/download/pdf/CS/2.DFBM-CS320.pdf 2.DFBM-CS320.pdf]
 * CSR Data Sheet: [http://www.csrsupport.com/download/2302/CS-101564-DSP10%20BlueCore4-ROM%20Product%20Data%20Sheet.pdf CS-101564-DSP10 BlueCore4-ROM Product Data Sheet.pdf]
 * Driver: Stock Linux Kernel BlueZ
+* PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch<br>
 
 == Neo FreeRunner ==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]] USB Host controller (OHCI)
-* PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch<br>
+
+
+== Neo 1973 ==
+{{Main|Neo_1973_hardware}}
+* Connected to: [[Samsung S3C2410]] USB Host controller (OHCI)
