*Empty MediaWiki Message*

--- a/Samsung_S3C2410.mw
+++ b/Samsung_S3C2410.mw
@@ -1,4 +1,4 @@
-* Feature: Processor
+* Feature: Processor + USB Host + USB Device 
 * Full name: Samsung S3C2410AL-26
 * Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=S3C2410 S3C2410.htm]
 * User Manual: [http://www.samsung.com/global/business/semiconductor/productRightMenuDown.do?doc_file=26537 2410UserManual.pdf]
@@ -9,3 +9,16 @@
 
 == Neo 1973 ==
 * GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA01Bv4/gpio.txt
+
+
+=== USB Host ===
+The USB Host controller is inside the S3C2410
+* Driver: Stock Linux kernel ohci_hcd
+
+=== USB Device ===
+The USB Device controller is inside the S3C2410 
+* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_udc.patch
+* Please see [[USB Product IDs]] on information about which Vendor/Product IDs we use
+* 1200mAh lithium battery charges when connected to powered host.
+* Mini-B connector [http://www.cypressindustries.com/enlarge.asp?Img=products/images/ccmusbb-32005-601.gif this one].
+* This can be used as a USB host: [[Neo1973_USB_host]]
