--- a/WM8753.mw
+++ b/WM8753.mw
@@ -7,7 +7,7 @@
 * Connected to: [[Samsung S3C2442B B54]] IIS interface (PCM data), [[Samsung S3C2442B B54]] I2C (Control)
 
 == Neo 1973 ==
-* Connected to: [[Samsung S3C2410AL-26]] IIS interface (PCM data), [[Samsung S3C2410AL-26]] I2C (Control)
+* Connected to: [[Samsung S3C2410]] IIS interface (PCM data), [[Samsung S3C2410]] I2C (Control)
 
 '''WM8753''' (also the '''Wolfson Codec''') is the "sound card" chip in the [[Neo1973 audio subsystem]]. It has a stereo ADC for recording and a stereo DAC for playback, plus a mono "voice" DAC.
 
