Made the first command a `cd to working directory` and corrected other commands for position in directory tree. This means you have to do less typing.

--- a/FSO_ringtones.mw
+++ b/FSO_ringtones.mw
@@ -6,9 +6,11 @@ The ringtone in milestone 2 is stored here:
 
 Now to change it is a little bit of fun.
 
-first in
+first change directory to
 
- /usr/lib/python2.5/site-packages/framework/subsystems/oeventd/receiver.py
+ /usr/lib/python2.5/site-packages/framework/subsystems/oeventd/
+
+and open the file receiver.py
 
 #this will be /var/lib/python-support/python2.5/framework/subsystems/oeventd/receiver.py if you are using FSO under Debian
 
@@ -31,10 +33,10 @@ filesrc.set_property( "location", "/usr/share/sounds/ringtone" )
 
 Then
 
- mv /usr/lib/python2.5/site-packages/framework/subsystems/oeventd/receiver.pyo /home/root 
+ mv receiver.pyo /home/root 
 #receiver.pyo will be receiver.pyc in FSO under Debian
- cd /usr/lib/python2.5/site-packages/framework/subsystems/oeventd/
-# or /var/lib/python-support/python2.5/framework/subsystems/oeventd as mentioned above
+
+
  python
   >>> import py_compile
   >>> py_compile.compile("receiver.py")
