--- a/Wishlist%2FGames.mw
+++ b/Wishlist%2FGames.mw
@@ -25,6 +25,7 @@ This is the page to centralize the suggestions for creating games on the OpenMok
 * Creating a Nethack port could be done. Tony said on the list: "I'm not entirely sure yet. I imagine I'll first do a text port with a "portal" view (in which you only see a part of the screen at a time), and a user-selected font size. Then I'd try a tiles-based port. It all depends on how readable the text is on the small screen."
 * [http://dosbox.sourceforge.net/ DOSBox] - would give the Opportunity to play dozens of DOS Games, like [http://www.abandonia.com/games/en/466/LandsofLore.htm Lands of Lore] -- bitbake recipe already exists, but the emulator is to slow without optimization configuration/code changes -- http://www.flickr.com/photos/pitcherfamily/1155008255/in/pool-openmoko/
 * [http://www.nongnu.org/enigma/ Enigma] A tilt maze-like puzzle game with 1000 levels (requires LUA).
+* [http://freeciv.wikia.com/wiki/Main_Page Freeciv] - a Free and Open Source empire-building strategy game inspired by the history of human civilization. The game commences in prehistory and your mission is to lead your tribe from the stone age to the space age...
 * [http://www.frozen-bubble.org/ Frozen Bubble], '''version 1 in openembedded''' 
 * [http://www.tucows.com/preview/9259 Gem Drop]
 * GJeweled
