*Empty MediaWiki Message*

--- a/LM4857.mw
+++ b/LM4857.mw
@@ -1,22 +1,25 @@
+* Feature: Stereo Amplifier
+* Product Homepage: [http://www.national.com/pf/LM/LM4857.html LM4857.html]
+* Data Sheet: [http://www.national.com/ds.cgi/LM/LM4857.pdf LM4857.pdf]
+
+== Neo 1973 ==
+{{Main|Neo_1973_hardware}}
+* Connects to: [[Samsung S3C2410]] I2C (Control)
+* Connects to: The stereo (LIN and RIN) input is connected to [[WM8753]]
+* Not used: The mono (MIN) input
+
 The '''LM4857''' is an audio power amplifier and part of the [[Neo1973 audio subsystem]]. It's connected to the VB power rail (battery terminal voltage) for power and thus needs to be powered off separately from the main system.
 
 The audio power output may vary as the battery discharges:
-
 * 0.5W per-channel stereo speaker output, used for the main speakers (LLS+- and RLS+-)
 * 33mW per-channel stereo headphone output (32 ohms), for the headset (LHP and RHP)
 * 43mW mono earpiece output, for the earpiece (EP+-)
 * Line-out, unused.
 
-The stereo (LIN and RIN) input is connected to [[WM8753]]. The mono (MIN) input is not used.
-
 Mixer settings starting "Amp" control it via [[I2C]], including:
 * Amp Mode: Off (mode 0), Call Speaker (mode 6), Stereo Speakers (mode 7), Stereo Speakers + Headphones (mode 8), Headphones (mode 9)
 * The volume controls Amp Left and Amp Right, and Amp Mono
 * Amp Earpiece 6dB toggle amplifies the call speaker output
-
-== External links ==
-* [http://www.national.com/pf/LM/LM4857.html The National Semiconductor product page for LM4857]
-* [http://www.national.com/ds/LM/LM4857.pdf The LM4857 data sheet] (PDF)
 
 [[Category:Neo1973 Hardware]]
 [[Category:Audio]]
