--- a/FreeRunner:_Selected_Blogs_and_Articles.mw
+++ b/FreeRunner:_Selected_Blogs_and_Articles.mw
@@ -48,6 +48,7 @@ Newest on top.
 
 === August 2008 ===
 * Lo schiaffo : [http://www.loschiaffo.org/telefono-open-source/ Opensource telephone]
+* TuguLab : [http://blog.tugulab.org/2008/08/13/come-configurare-openmoko-sul-neofreerunner-e-utilizzarlo/ Come configurare Openmoko sul NeoFreerunner e utilizzarlo!] by jollyr0ger
 
 
 [[Category:Community]]
