/* On the Neo site */

--- a/How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top.mw
+++ b/How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top.mw
@@ -29,7 +29,7 @@ this command let desk-top computer  be a Server to listen  the other linux-based
 
 which is connecting it through the bluetooth.
 
-==On the Neo site==
+==On the Neo side==
 In the Neo:
 
  > echo "1" > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on
