/* Start to transfer date */

--- a/How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top.mw
+++ b/How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top.mw
@@ -68,7 +68,7 @@ PING 10.0.0.2 (10.0.0.2) 56(84) bytes of data.
 
 ........
 
-==Start to transfer date==
+==Start to transfer data==
 Also,you can copy datas to the Neo.
 
  > scp XXX.X root@10.0.0.2:
