--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1948,6 +1948,13 @@ Due to common customs problems we created google group to discuss how to get tha
 | 0(1)
 | 0(1) (Жду объявления цены)
 |-
+| 51. [[Special:Emailuser/Self-mademan|Self-mademan]]
+| Self-mademan
+| 0(1)
+| 0(1)
+| 0(1) (Жду цены)
+|-
+
 
 |Total number:
 |
