--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -35,9 +35,9 @@ With the following additional features:
 * Tri-band GSM and GPRS for North America (850/1800/1900 Mhz) and the rest of the world (900/1800/1900 Mhz)
 * USB Host function with 500mA power allowing you to power USB devices for short periods (will drain the FreeRunner battery faster)
 
-A full list of the hardware specs and components of the Neo FreeRunner (internal codename GTA02xxx) can be found at [[Neo FreeRunner GTA02 Hardware]].
+A full list of the hardware specs and components of the Neo FreeRunner (internal codename [[GTA02 revisions|GTA02]]) can be found at [[Neo FreeRunner GTA02 Hardware]].
 
-A comparison between Neo 1973 and Neo FreeRunner is available at [[Neo1973: GTA01Bv4 versus GTA02 comparison]].
+A comparison between [[Neo 1973]] and Neo FreeRunner is available at [[Neo 1973 vs Neo FreeRunner]].
 
 == What is the price? ==
 
